@@ -17,7 +17,8 @@
 - Management console:
 	- Object context menu available on geo map
 	- Filter in event template configurator
-- Fixed issues: #786, #831, #841, #852, #864, #890, #892, #896, #897, #902, #905, #913, #919, #921, #928
+	- Web console use client time zone to display time
+- Fixed issues: #786, #831, #841, #852, #864, #890, #892, #896, #897, #900, #902, #905, #913, #919, #921, #928
 
 
 *
